Turn on autoplay. Game ends when timer stops.

--- a/index.html
+++ b/index.html
@@ -50,11 +50,7 @@
     <div ng-view=""></div>
     </div>
 
-    <div class="footer">
-      <div class="container">
-        <p>Made by Mugen</p>
-      </div>
-    </div>
+    <div class="footer">Made by Mugen</div>
 
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
