Add new controller and countdown

--- a/index.html
+++ b/index.html
@@ -47,12 +47,11 @@
     </div>
 
     <div class="container">
-    <div ng-view=""></div>
+      <h1>Eminem or Fall Out Boy?</h1>
+      <div ng-view=""></div>
     </div>
 
-    <div class="footer">Made by Mugen</div>
-
-
+    <footer>Made by Mugen</footer>
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
      <script>
        !function(A,n,g,u,l,a,r){A.GoogleAnalyticsObject=l,A[l]=A[l]||function(){
@@ -80,6 +79,7 @@
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
+        <script src="scripts/controllers/play.js"></script>
         <!-- endbuild -->
 </body>
 </html>
