Jumbotron. Rename to mcginntunes. Refactor main page.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
   </head>
-  <body ng-app="mcginndogApp">
+  <body ng-app="mcginntunesApp">
     <!--[if lte IE 8]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
@@ -32,7 +32,7 @@
               <span class="icon-bar"></span>
             </button>
 
-            <a class="navbar-brand" href="#/">mcginndog</a>
+            <a class="navbar-brand" href="#/">mcginntunes</a>
           </div>
 
           <div class="collapse navbar-collapse" id="js-navbar-collapse">
@@ -46,7 +46,6 @@
     </div>
 
     <div class="container">
-      <h1>Eminem or Fall Out Boy?</h1>
       <div ng-view=""></div>
     </div>
 
@@ -75,10 +74,10 @@
     <!-- endbower -->
     <!-- endbuild -->
 
-        <!-- build:js({.tmp,app}) scripts/scripts.js -->
-        <script src="scripts/app.js"></script>
-        <script src="scripts/controllers/main.js"></script>
-        <script src="scripts/controllers/play.js"></script>
-        <!-- endbuild -->
+    <!-- build:js({.tmp,app}) scripts/scripts.js -->
+    <script src="scripts/app.js"></script>
+    <script src="scripts/controllers/main.js"></script>
+    <script src="scripts/controllers/play.js"></script>
+    <!-- endbuild -->
 </body>
 </html>
